--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,3 +1,8 @@
+#header {
+  background-color: var(--bg-card);
+  box-shadow: var(--card-shadow);
+}
+
 #header-link {
   color: var(--text-primary);
 }
