--- a/src/components/ContactSection/index.css
+++ b/src/components/ContactSection/index.css
@@ -1,12 +1,12 @@
 #contact {
-  color: var(--primary-text-color);
-  background-color: var(--bg-card);
+  color: var(--ctp-rosewater);
+  background-color: var(--ctp-surface0); 
+  box-shadow: var(--ctp-box-shadow);
 }
 
 .contact-link:hover,
 .contact-link:focus {
   color: var(--link-hover);
-  text-shadow: 0 0 6px rgba(222, 119, 94, 0.5);
 }
 
 .contact-link {
