--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ p {
 }
 
 section {
-  @apply px-6 py-20 bg-surface0 rounded-lg mx-4 md:mx-16 shadow-card;
+  @apply px-6 py-20 rounded-lg mx-4 md:mx-16; 
 }
 
 footer {
@@ -91,7 +91,7 @@ section#hero p {
 section#about,
 section#projects,
 section#contact {
-  @apply px-6 py-20 bg-surface0 rounded-lg mx-4 md:mx-16 shadow-card;
+  @apply px-6 py-20  rounded-lg mx-4 md:mx-16 shadow-card;
 }
 
 
