--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,11 @@ body {
   @apply bg-base text-rosewater;
 }
 
-
-
 body {
   @apply bg-base text-rosewater;
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /* Navbar and page layout */
@@ -39,7 +37,7 @@ p {
 }
 
 section {
-  @apply px-6 py-20 rounded-lg mx-4 md:mx-16; 
+  @apply px-6 py-20 rounded-lg mx-4 md:mx-16;
 }
 
 footer {
@@ -93,8 +91,6 @@ section#projects,
 section#contact {
   @apply px-6 py-20  rounded-lg mx-4 md:mx-16 shadow-card;
 }
-
-
 
 section#contact p a {
   @apply text-lavender hover:text-green;
